--- a/Source/PawnPlus.Core/Localizations/en-US.resx
+++ b/Source/PawnPlus.Core/Localizations/en-US.resx
@@ -394,7 +394,7 @@ Text for &quot;Line&quot; label in status bar.</comment>
   <data name="Exception_InvalidPlugin" xml:space="preserve">
     <value>&quot;{0}&quot; is an invalid plugin.</value>
   </data>
-  <data name="Text_UnhandledExceptionOccurred" xml:space="preserve">
+  <data name="Text_UnhandledException" xml:space="preserve">
     <value>Unhandled exception has occurred in application.
 If you click continue the application will ignore this issue and attempt to continue. 
 If you click quit, the application will close immediately.</value>
@@ -404,6 +404,35 @@ If you click quit, the application will close immediately.</value>
   </data>
   <data name="Exception_FileNotFound" xml:space="preserve">
     <value>File &quot;{0}&quot; was not found.</value>
+  </data>
+  <data name="Text_HandledExceptionOccurred" xml:space="preserve">
+    <value>Handled Exception occured: {0}</value>
+  </data>
+  <data name="Name_HandledException" xml:space="preserve">
+    <value>Handled Exception</value>
+    <comment>Name for &quot;ExceptionForm&quot; form.</comment>
+  </data>
+  <data name="Name_UnhandledException" xml:space="preserve">
+    <value>Unhandled Exception</value>
+    <comment>Name for &quot;ExceptionForm&quot; form.</comment>
+  </data>
+  <data name="Name_UIException" xml:space="preserve">
+    <value>UI Exception</value>
+    <comment>Name for &quot;ExceptionForm&quot; form.</comment>
+  </data>
+  <data name="Text_FatalWindowsForms" xml:space="preserve">
+    <value>Fatal Windows Forms Error</value>
+  </data>
+  <data name="Text_UnhandledExceptionOccured" xml:space="preserve">
+    <value>Unhandled Exception occured: {0}</value>
+    <comment>Text for log file.</comment>
+  </data>
+  <data name="Text_HandledException" xml:space="preserve">
+    <value>An exception has occurred in application (don&apos;t worry it is an handled exception).
+If you click continue the application will ignore this issue continue. </value>
+  </data>
+  <data name="Text_UIException" xml:space="preserve">
+    <value>UI Exception</value>
   </data>
 
 </root>
