--- a/Source/PawnPlus.Core/Localizations/en-US.resx
+++ b/Source/PawnPlus.Core/Localizations/en-US.resx
@@ -299,9 +299,8 @@ Text for &quot;Save&quot; button.</comment>
 Text for &quot;Save As&quot; button.</comment>
   </data>
   <data name="Status_Version" xml:space="preserve">
-    <value>Version {0}.{1}.{2}</value>
-    <comment>It must have three formaters.
-Version of application.</comment>
+    <value>Version</value>
+    <comment>Version of application.</comment>
   </data>
   <data name="Status_Column" xml:space="preserve">
     <value>Column {0}</value>
@@ -345,12 +344,6 @@ Text for &quot;Line&quot; label in status bar.</comment>
   </data>
   <data name="Status_Compiling" xml:space="preserve">
     <value>Compiling...</value>
-  </data>
-  <data name="Status_IncludesCopying" xml:space="preserve">
-    <value>Copying include files...</value>
-  </data>
-  <data name="Status_IncludesDeleting" xml:space="preserve">
-    <value>Deleting include files...</value>
   </data>
   <data name="Status_EmptyText" xml:space="preserve">
     <value>Current document is empty</value>
