--- a/Source/PawnPlus.Core/Forms/ExceptionForm.resx
+++ b/Source/PawnPlus.Core/Forms/ExceptionForm.resx
@@ -117,4 +117,100 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAAAIABoBAAAJgAAACAgAAAAACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAAEAE
+        AAAAAAAAAAAAAAAAAAAAAAAA////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQAAAEkAAAC1AAAAvwAAAL8AAAC/AAAAvwAAAL8AAAC/AAAAvwAA
+        AL8AAAC/AAAAvwAAAL8AAAC/AAAAtQAAAE0AAADPAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADTAAAAjQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA+wAA
+        AE0AAABLAAAA9wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAkwAAABMAAADtAAAA/wAAAP8AAAD/AAAA/wAA
+        AOkAAAAD////AQAAAN0AAAD/AAAA/wAAAP8AAAD/AAAA8QAAABf///8BAAAAbQAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAAwQAAAL8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAHP///8B////AQAAAAUAAADZAAAA/wAA
+        AP8AAAD/AAAA/wAAAIUAAAB3AAAA/wAAAP8AAAD/AAAA/wAAANsAAAAH////Af///wH///8BAAAATQAA
+        AP8AAAD/AAAA/wAAAP8AAABNAAAAPwAAAP8AAAD/AAAA/wAAAP8AAABR////Af///wH///8B////Af//
+        /wEAAACxAAAA/wAAAP8AAAD/AAAAKwAAAB0AAAD/AAAA/wAAAP8AAAC1AAAAA////wH///8B////Af//
+        /wH///8BAAAAJwAAAPkAAAD/AAAA+QAAAAkAAAADAAAA6QAAAP8AAAD7AAAAKf///wH///8B////Af//
+        /wH///8B////Af///wEAAACNAAAA/wAAAOUAAAAHAAAAAwAAAN0AAAD/AAAAkf///wH///8B////Af//
+        /wH///8B////Af///wH///8BAAAAEQAAAOsAAAD/AAAAmQAAAJcAAAD/AAAA7QAAABP///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wEAAABrAAAA/wAAAP8AAAD/AAAA/wAAAG3///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8BAAAACwAAAM8AAAD/AAAA/wAAAM8AAAAL////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEAAABDAAAA7wAAAPEAAABD////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQAAACEAAAAh////Af//
+        /wH///8B////Af///wH///8B////AQAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA
+        //8AAP//AAD//wAA//8AAP//AAD//wAA//8oAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAA////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wEAAAAVAAAAVQAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAA
+        AH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAA
+        AH8AAAB/AAAAfwAAAH8AAAB/AAAAVQAAABn///8BAAAALQAAAOMAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA5wAAADUAAACRAAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAnQAAAKsAAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAACzAAAAUQAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADPAAAAUQAA
+        AFEAAADLAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AGEAAAAJAAAA2wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA8wAA
+        ABX///8B////AQAAAA0AAADjAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAADnAAAACf///wEAAABNAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAC7////Af///wH///8B////AQAAAKMAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAF3///8B////Af///wEAAAC7AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAOsAAAAJ////Af///wEAAAAFAAAA1wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAADH////Af///wH///8B////AQAAAC0AAAD7AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAL8AAABJAAAASQAAALMAAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAADn///8B////Af///wH///8B////AQAAAI0AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAACV////Af///wH///8B////Af///wH///8BAAAAFQAA
+        AO8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADrAAAAYQAAAGEAAADXAAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA8wAAABn///8B////Af///wH///8B////Af//
+        /wH///8BAAAAdQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAMX///8B////AQAA
+        AKcAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAB9////Af///wH///8B////Af//
+        /wH///8B////Af///wEAAAAZAAAAuwAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAqf//
+        /wH///8BAAAAiwAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAwQAAAB////8B////Af//
+        /wH///8B////Af///wH///8B////Af///wEAAABdAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAACJ////Af///wEAAABvAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAABl////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEAAACjAAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAGn///8B////AQAAAE8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAqQAA
+        AAf///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQAAACkAAAD7AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAAQf///wH///8BAAAAIQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        APsAAAAx////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQAA
+        AIsAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP0AAAAl////Af///wEAAAALAAAA4wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAAj////wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8BAAAAEQAAAOsAAAD/AAAA/wAAAP8AAAD/AAAA5////wH///8B////Af///wEAAADHAAAA/wAA
+        AP8AAAD/AAAA/wAAAO8AAAAV////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8BAAAAaQAAAP8AAAD/AAAA/wAAAP8AAAC/////Af///wH///8B////AQAA
+        AKsAAAD/AAAA/wAAAP8AAAD/AAAAdf///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wEAAAAVAAAAtwAAAP8AAAD/AAAA/wAAANUAAAAX////Af//
+        /wEAAAALAAAAyQAAAP8AAAD/AAAA/wAAALsAAAAZ////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEAAABFAAAA/wAAAP8AAAD/AAAA/wAA
+        AHEAAAAJAAAACQAAAG0AAAD/AAAA/wAAAP8AAAD/AAAASf///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wEAAACzAAAA/wAA
+        AP8AAAD/AAAA/wAAAOsAAADrAAAA/wAAAP8AAAD/AAAA/wAAALf///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AQAA
+        AEMAAADlAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADnAAAARf///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////AQAAAIcAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAIn///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8BAAAAKwAAAM0AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADNAAAAK///
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8BAAAAbwAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AG////8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wEAAAAFAAAAywAAAP8AAAD/AAAA/wAA
+        AP8AAADLAAAABf///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wEAAAA5AAAAwQAA
+        AP8AAAD/AAAAyQAAAD3///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wEAAAAZAAAAaQAAAGkAAAAZ////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</value>
+  </data>
 </root>
